tweeked page outlined and removed chrome console errors

--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -86,7 +86,7 @@
                         <div class="chat-discussion" style="height: auto">
 
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a1.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date"> Mon Jan 26 2015 - 18:39:23 </span>
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a4.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Karl Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a2.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a5.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Alice Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a6.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Mark Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -156,7 +156,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a4.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Karl Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a2.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a5.jpg" alt="" >
+                                <img class="message-avatar" src="images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Alice Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
