--- a/views/admin/single.ejs
+++ b/views/admin/single.ejs
@@ -285,7 +285,7 @@
                         <div class="chat-discussion" style="height: auto">
 
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a1.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date"> Mon Jan 26 2015 - 18:39:23 </span>
@@ -300,7 +300,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a4.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Karl Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -315,7 +315,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a2.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -325,7 +325,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a5.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Alice Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -340,7 +340,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a6.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Mark Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -355,7 +355,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a4.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Karl Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -370,7 +370,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a2.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -380,7 +380,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a5.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Alice Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
