--- a/views/clients/single.ejs
+++ b/views/clients/single.ejs
@@ -284,7 +284,7 @@
                         <div class="chat-discussion" style="height: auto">
 
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a1.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date"> Mon Jan 26 2015 - 18:39:23 </span>
@@ -299,7 +299,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a4.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Karl Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -314,7 +314,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a2.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -324,7 +324,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a5.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Alice Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -339,7 +339,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a6.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Mark Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -354,7 +354,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a4.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Karl Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -369,7 +369,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a2.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Michael Smith </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -379,7 +379,7 @@
                                 </div>
                             </div>
                             <div class="chat-message">
-                                <img class="message-avatar" src="images/a5.jpg" alt="" >
+                                <img class="message-avatar" src="../../images/tacogif.gif" alt="" >
                                 <div class="message">
                                     <a class="message-author" href="#"> Alice Jordan </a>
                                     <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
