--- a/views/clients/edit.ejs
+++ b/views/clients/edit.ejs
@@ -32,7 +32,7 @@
                             <div class="btn-group col-lg-6">
                               <br>
                               <select name="project" required>
-                                <option value="<%client.project_id%>" disabled selected><%=client.project_id%></option>
+                                <option value="<%clients_project.name%>" disabled selected><%=clients_project.name%></option>
                                 <% projects.forEach(function (project) { %>
                                 <option value="<%=project.id%>"><%=project.name%></option>
                                 <% }) %>
