logout working on all fronts

--- a/views/admin/nav/main.ejs
+++ b/views/admin/nav/main.ejs
@@ -27,7 +27,7 @@
                         <a class="" href="/auth/login">Login</a>
                     </li>
                     <li>
-                        <a class="" href="/auth/logout">Logout</a>
+                        <a class="logout">Logout</a>
                     </li>
                     <li>
                         <a class="" href="/users/<%=admin.id%>/edit">Profile</a>
@@ -117,7 +117,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                  <a id="logout">
+                  <a class="logout">
                         <i class="pe-7s-upload pe-rotate-90"></i>
                     </a>
                 </li>
@@ -146,7 +146,7 @@
                       <li><a href="/projects/new">Add Projects</a></li>
                       <li><a href="/clients/new">Add Clients</a></li>
                       <li class="divider"></li>
-                      <li><a href="/auth/logout">Logout</a></li>
+                      <li><a class="logout">Logout</a></li>
                     </ul>
                 </div>
 
