--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -21,7 +21,7 @@
 
 <script>
 
-    $('#logout').click(function () {
+    $('.logout').click(function () {
         swal({
                     title: "Logging you off",
                     text: "Are you sure?",
@@ -45,6 +45,7 @@
                         }
                     });
     });
+
 
 </script>
 
