--- a/views/projects/partials/footer.ejs
+++ b/views/projects/partials/footer.ejs
@@ -22,7 +22,7 @@
 
 <script>
 
-    $('#logout').click(function () {
+    $('.logout').click(function () {
         swal({
                     title: "Logging you off",
                     text: "Are you sure?",
