--- a/views/users/partials/footer.ejs
+++ b/views/users/partials/footer.ejs
@@ -21,7 +21,7 @@
 
 <script>
 
-    $('#logout').click(function () {
+    $('.logout').click(function () {
         swal({
                     title: "Logging you off",
                     text: "Are you sure?",
