--- a/views/clients/new.ejs
+++ b/views/clients/new.ejs
@@ -17,15 +17,19 @@
                                 <label>Email</label>
                                 <input type="" value="" id="" class="form-control" name="email" required>
                             </div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-lg-6">
                                 <label>First Name</label>
                                 <input type="" value="" id="" class="form-control" name="first_name" required>
                             </div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-lg-6">
                                 <label>Last Name</label>
                                 <input type="" value="" id="" class="form-control" name="last_name" required>
                             </div>
-                            <div class="btn-group col-lg-4">
+                            <div class="form-group col-lg-6">
+                                <label>Username</label>
+                                <input type="" value="" id="" class="form-control" name="username" required>
+                            </div>
+                            <div class="btn-group col-lg-6">
                               <br>
                               <select name="project" required>
                                 <option value="" disabled selected>Project</option>
