client login and seed password

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -62,7 +62,7 @@
                                      Remember login
                             </div>
                             <button class="btn btn-success btn-block">Login</button>
-                            <a class="btn btn-default btn-block" href="/auth/register">Register</a>
+                            <a class="btn btn-danger btn-block" href="/auth/register">Client Login</a>
                         </form>
                 </div>
             </div>
