--- a/views/clients/edit.ejs
+++ b/views/clients/edit.ejs
@@ -25,6 +25,10 @@
                                 <label>Last Name</label>
                                 <input type="" value="<%=client.last_name%>" id="" class="form-control" name="last_name" required>
                             </div>
+                            <div class="form-group col-lg-6">
+                                <label>Username</label>
+                                <input type="" value="<%=client.username%>" id="" class="form-control" name="username" required>
+                            </div>
                             <div class="form-group col-lg-4">
                                 <label>Avatar</label>
                                 <input type="" value="<%=client.avatar%>" id="" class="form-control" name="avatar" required>
@@ -35,21 +39,22 @@
                             </div>
 
                             <% if (clients_project === null){%>
-                            <div class="btn-group col-lg-4">
-                              <br>
-                              <select name="project" required>
-                                <option value="<%clients_project.name%>" disabled selected><%=clients_project.name%></option>
-                                <% projects.forEach(function (project) { %>
-                                <option value="<%=project.id%>"><%=project.name%></option>
-                                <% }) %>
-                            </select>
-                            </div>
+                              <div class="btn-group col-lg-4">
+                                <br>
+                                <select name="project" required>
+                                  <option disabled selected>Unassigned</option>
+                                  <% projects.forEach(function (project) { %>
+                                  <option value="<%=project.id%>"><%=project.name%></option>
+                                  <% }) %>
+                              </select>
+                              </div>
+
                             <% }else{ %>
 
                               <div class="btn-group col-lg-4">
                                 <br>
                                 <select name="project" required>
-                                  <option disabled selected>Unassigned</option>
+                                  <option value="<%clients_project.name%>" disabled selected><%=clients_project.name%></option>
                                   <% projects.forEach(function (project) { %>
                                   <option value="<%=project.id%>"><%=project.name%></option>
                                   <% }) %>
