login page adjustment

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -61,8 +61,8 @@
                                 <input type="checkbox" class="i-checks" checked>
                                      Remember login
                             </div>
-                            <button class="btn btn-success btn-block">Login</button>
-                            <a class="btn btn-danger btn-block" href="/auth/register">Client Login</a>
+                            <a class="btn btn-info btn-block" href="/auth/register">Client Login</a>
+                            <button class="btn btn-success btn-block">User Login</button>
                         </form>
                 </div>
             </div>
