--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -385,7 +385,7 @@
         <span class="pull-right">
             The_ReFactory
         </span>
-        Deloitte @2017
+        Company @2017
     </footer>
 
 </div>
