--- a/views/auth/select.ejs
+++ b/views/auth/select.ejs
@@ -44,25 +44,28 @@
     <div class="row">
         <div class="col-md-12">
             <div class="text-center m-b-md">
-                <h3>Login</h3>
+                <h3>Client or User?</h3>
             </div>
             <div class="hpanel">
                 <div class="panel-body">
                         <form action="/auth/login" id="loginForm" method="POST">
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label class="control-label" for="username">Username</label>
                                 <input type="text" title="Please enter you username" required value="" name="username" id="username" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="password">Password</label>
                                 <input type="password" title="Please enter your password" required value="" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="checkbox">
+                            </div> -->
+                            <div class="profile-picture">
+                            <img src="../images/tacogif.gif" height="170" width="170" class="img-circle m-b" alt="logo">
+                          </div>
+                            <!-- <div class="checkbox">
                                 <input type="checkbox" class="i-checks" checked>
                                      Remember login
-                            </div>
-                            <a class="btn btn-info btn-block" href="/auth/register">Client Login</a>
-                            <button class="btn btn-success btn-block">User Login</button>
+                            </div> -->
+                            <a class="btn btn-info btn-block" href="/auth/client_login">Client Login</a>
+                            <a class="btn btn-success btn-block" href="/auth/user_login">User Login</a>
                         </form>
                 </div>
             </div>
