edit page for a client working

--- a/views/client/nav/main.ejs
+++ b/views/client/nav/main.ejs
@@ -142,7 +142,7 @@
                         <small class="text-muted"> Edit <b class="caret"></b></small>
                     </a>
                     <ul class="dropdown-menu animated flipInX m-t-xs">
-                      <li><a href="/client/<%=client.id%>/edit">Edit Profile</a></li>
+                      <li><a href="/client/edit/<%=client.id%>">Edit Profile</a></li>
                       <li><a href="/client/<%=client.project_id%>/project">Mange Project</a></li>
                       <li class="divider"></li>
                       <li><a class="logout">Logout</a></li>
