client page resolved

--- a/views/client/edit.ejs
+++ b/views/client/edit.ejs
@@ -11,7 +11,7 @@
             </div>
             <div class="hpanel">
                 <div class="panel-body">
-                        <form action="/clients/<%=client.id%>?_method=PUT" id="loginForm" method="POST">
+                        <form action="/client/<%=client.id%>?_method=PUT" id="loginForm" method="POST">
                             <div class="row">
                             <div class="form-group col-lg-6">
                                 <label>Email</label>
