--- a/views/client/project.ejs
+++ b/views/client/project.ejs
@@ -354,7 +354,7 @@
                     <div class="col-md-6">
                         <div class="hpanel">
                             <div class="panel-body text-center">
-                              <a href="/clients/<%=client.id%>">
+                              <a href="/client/<%=client.id%>">
                                 <img alt="logo" class="img-circle img-small" src="<%=client.avatar%>">
                                 <div class="m-t-sm">
                                     <strong><%=client.first_name%> <%=client.last_name%></strong>
