edit logout button to work locally only

--- a/views/client/partials/footer.ejs
+++ b/views/client/partials/footer.ejs
@@ -38,8 +38,8 @@
                             setTimeout(
                             function()
                             {
-                              window.location.href = "http://therefactory.herokuapp.com/auth/logout"
-                              // window.location.href = "http://localhost:3000/auth/logout"
+                              // window.location.href = "http://therefactory.herokuapp.com/auth/logout"
+                               window.location.href = "http://localhost:3000/auth/logout"
                             }, 1000);
                         }else {
                             swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "../../images/tacogif.gif" });
