--- a/views/client/edit.ejs
+++ b/views/client/edit.ejs
@@ -1,7 +1,7 @@
 <% include forms/header %>
 
 <div class="back-link">
-    <a href="/clients/<%=client.id%>" class="btn btn-primary">Back</a>
+    <a href="/client/<%=client.id%>" class="btn btn-primary">Back</a>
 </div>
 <div class="register-container animate-panel">
     <div class="row">
