beautify users and root files

--- a/views/users/partials/footer.ejs
+++ b/views/users/partials/footer.ejs
@@ -20,93 +20,119 @@
 <script src="../../javascripts/charts.js"></script>
 
 <script>
+  $('.logout').click(function() {
+    swal({
+        title: "Logging you off",
+        text: "Are you sure?",
+        type: "error",
+        showCancelButton: true,
+        confirmButtonColor: "#DD6B55",
+        confirmButtonText: "Yes, log off!",
+        cancelButtonText: "No, lets stay!",
+        closeOnConfirm: false,
+        closeOnCancel: false
+      },
+      function(isConfirm) {
+        if (isConfirm) {
+          swal("Bye Champ", "See you soon!", "success");
+          setTimeout(
+            function() {
+              // window.location.href = "http://therefactory.herokuapp.com/auth/logout"
+              window.location.href = "http://localhost:3000/auth/logout"
+            }, 1000);
+        } else {
+          swal({
+            title: "Glad to see you stay!",
+            text: "We were about to lose out shit",
+            imageUrl: "../images/tacogif.gif"
+          });
+        }
+      });
+  });
 
-    $('.logout').click(function () {
-        swal({
-                    title: "Logging you off",
-                    text: "Are you sure?",
-                    type: "error",
-                    showCancelButton: true,
-                    confirmButtonColor: "#DD6B55",
-                    confirmButtonText: "Yes, log off!",
-                    cancelButtonText: "No, lets stay!",
-                    closeOnConfirm: false,
-                    closeOnCancel: false },
-                    function (isConfirm) {
-                        if (isConfirm) {
-                          swal("Bye Champ", "See you soon!", "success");
-                            setTimeout(
-                            function()
-                            {
-                              // window.location.href = "http://therefactory.herokuapp.com/auth/logout"
-                               window.location.href = "http://localhost:3000/auth/logout"
-                            }, 1000);
-                        }else {
-                            swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "../images/tacogif.gif" });
-                        }
-                    });
-    });
+  $(function() {
 
-    $(function () {
+    /**
+     * Flot charts data and options
+     */
+    var data1 = [
+      [0, 55],
+      [1, 48],
+      [2, 40],
+      [3, 36],
+      [4, 40],
+      [5, 60],
+      [6, 50],
+      [7, 51]
+    ];
+    var data2 = [
+      [0, 56],
+      [1, 49],
+      [2, 41],
+      [3, 38],
+      [4, 46],
+      [5, 67],
+      [6, 57],
+      [7, 59]
+    ];
 
-        /**
-         * Flot charts data and options
-         */
-        var data1 = [ [0, 55], [1, 48], [2, 40], [3, 36], [4, 40], [5, 60], [6, 50], [7, 51] ];
-        var data2 = [ [0, 56], [1, 49], [2, 41], [3, 38], [4, 46], [5, 67], [6, 57], [7, 59] ];
+    var chartUsersOptions = {
+      series: {
+        splines: {
+          show: true,
+          tension: 0.4,
+          lineWidth: 1,
+          fill: 0.4
+        },
+      },
+      grid: {
+        tickColor: "#f0f0f0",
+        borderWidth: 1,
+        borderColor: 'f0f0f0',
+        color: '#6a6c6f'
+      },
+      colors: ["#62cb31", "#efefef"],
+    };
 
-        var chartUsersOptions = {
-            series: {
-                splines: {
-                    show: true,
-                    tension: 0.4,
-                    lineWidth: 1,
-                    fill: 0.4
-                },
-            },
-            grid: {
-                tickColor: "#f0f0f0",
-                borderWidth: 1,
-                borderColor: 'f0f0f0',
-                color: '#6a6c6f'
-            },
-            colors: [ "#62cb31", "#efefef"],
-        };
+    $.plot($("#flot-line-chart"), [data1, data2], chartUsersOptions);
 
-        $.plot($("#flot-line-chart"), [data1, data2], chartUsersOptions);
+    /**
+     * Flot charts 2 data and options
+     */
+    var chartIncomeData = [{
+      label: "line",
+      data: [
+        [1, 10],
+        [2, 26],
+        [3, 16],
+        [4, 36],
+        [5, 32],
+        [6, 51]
+      ]
+    }];
 
-        /**
-         * Flot charts 2 data and options
-         */
-        var chartIncomeData = [
-            {
-                label: "line",
-                data: [ [1, 10], [2, 26], [3, 16], [4, 36], [5, 32], [6, 51] ]
-            }
-        ];
+    var chartIncomeOptions = {
+      series: {
+        lines: {
+          show: true,
+          lineWidth: 0,
+          fill: true,
+          fillColor: "#64cc34"
 
-        var chartIncomeOptions = {
-            series: {
-                lines: {
-                    show: true,
-                    lineWidth: 0,
-                    fill: true,
-                    fillColor: "#64cc34"
-
-                }
-            },
-            colors: ["#62cb31"],
-            grid: {
-                show: false
-            },
-            legend: {
-                show: false
-            }
-        };
-        $.plot($("#flot-income-chart"), chartIncomeData, chartIncomeOptions);
-    });
-
+        }
+      },
+      colors: ["#62cb31"],
+      grid: {
+        show: false
+      },
+      legend: {
+        show: false
+      }
+    };
+    $.plot($("#flot-income-chart"), chartIncomeData, chartIncomeOptions);
+  });
 </script>
 
 </body>
+
 </html>
