--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,105 +1,107 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- Page title -->
-    <title>The ReFactory</title>
+  <!-- Page title -->
+  <title>The ReFactory</title>
 
-    <link rel="shortcut icon" type="image/ico" href="../images/favicon.ico" />
+  <link rel="shortcut icon" type="image/ico" href="../images/favicon.ico" />
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
 
-    <!-- Vendor styles -->
-    <link rel="stylesheet" href="../stylesheets/vendor/fontawesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
-    <link rel="stylesheet" href="../stylesheets/vendor/animate.css/animate.css" />
-    <link rel="stylesheet" href="../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
+  <!-- Vendor styles -->
+  <link rel="stylesheet" href="../stylesheets/vendor/fontawesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
+  <link rel="stylesheet" href="../stylesheets/vendor/animate.css/animate.css" />
+  <link rel="stylesheet" href="../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
 
-    <!-- App styles -->
-    <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="../stylesheets/styles/style.css">
+  <!-- App styles -->
+  <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+  <link rel="stylesheet" href="../stylesheets/fonts/pe-icon-7-stroke/css/helper.css" />
+  <link rel="stylesheet" href="../stylesheets/styles/style.css">
 
 </head>
+
 <body class="blank">
 
-<!-- Simple splash screen-->
-<!-- <div class="splash"> <div class="color-line"></div><div class="splash-title"><h1>Homer - Responsive Admin Theme</h1><p>Special Admin Theme for small and medium webapp with very clean and aesthetic style and feel. </p><div class="spinner"> <div class="rect1"></div> <div class="rect2"></div> <div class="rect3"></div> <div class="rect4"></div> <div class="rect5"></div> </div> </div> </div> -->
-<!--[if lt IE 7]>
+  <!-- Simple splash screen-->
+  <!-- <div class="splash"> <div class="color-line"></div><div class="splash-title"><h1>Homer - Responsive Admin Theme</h1><p>Special Admin Theme for small and medium webapp with very clean and aesthetic style and feel. </p><div class="spinner"> <div class="rect1"></div> <div class="rect2"></div> <div class="rect3"></div> <div class="rect4"></div> <div class="rect5"></div> </div> </div> </div> -->
+  <!--[if lt IE 7]>
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<!-- <div class="color-line"></div> -->
+  <!-- <div class="color-line"></div> -->
 
-<div class="back-link">
+  <div class="back-link">
     <a href="/" class="btn btn-primary">Back</a>
-</div>
-<div class="register-container animate-panel">
+  </div>
+  <div class="register-container animate-panel">
     <div class="row">
-        <div class="col-md-12">
-            <div class="text-center m-b-md">
-                <h3>Registration</h3>
-            </div>
-            <div class="hpanel">
-                <div class="panel-body">
-                        <form action="/auth/register" id="loginForm" method="POST">
-                            <div class="row">
-                            <div class="form-group col-lg-12">
-                                <label>Username</label>
-                                <input type="" value="" id="" class="form-control" name="username" required>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <label>First Name</label>
-                                <input type="" value="" id="" class="form-control" name="first_name" required>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <label>Last Name</label>
-                                <input type="" value="" id="" class="form-control" name="last_name" required>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <label>Email Address</label>
-                                <input type="" value="" id="" class="form-control" name="email" required>
-                            </div>
-                            <div class="form-group col-lg-6">
-                                <label>Password</label>
-                                <input type="password" value="" id="" class="form-control" name="password" required>
-                            </div>
-                            <div class="checkbox col-lg-12">
-                                <input type="checkbox" class="i-checks" checked>
-                                Sign up for our newsletter
-                            </div>
-                            </div>
-                            <div class="text-center">
-                                <button class="btn btn-success">Register</button>
-                            </div>
-                        </form>
+      <div class="col-md-12">
+        <div class="text-center m-b-md">
+          <h3>Registration</h3>
+        </div>
+        <div class="hpanel">
+          <div class="panel-body">
+            <form action="/auth/register" id="loginForm" method="POST">
+              <div class="row">
+                <div class="form-group col-lg-12">
+                  <label>Username</label>
+                  <input type="" value="" id="" class="form-control" name="username" required>
                 </div>
-            </div>
+                <div class="form-group col-lg-6">
+                  <label>First Name</label>
+                  <input type="" value="" id="" class="form-control" name="first_name" required>
+                </div>
+                <div class="form-group col-lg-6">
+                  <label>Last Name</label>
+                  <input type="" value="" id="" class="form-control" name="last_name" required>
+                </div>
+                <div class="form-group col-lg-6">
+                  <label>Email Address</label>
+                  <input type="" value="" id="" class="form-control" name="email" required>
+                </div>
+                <div class="form-group col-lg-6">
+                  <label>Password</label>
+                  <input type="password" value="" id="" class="form-control" name="password" required>
+                </div>
+                <div class="checkbox col-lg-12">
+                  <input type="checkbox" class="i-checks" checked> Sign up for our newsletter
+                </div>
+              </div>
+              <div class="text-center">
+                <button class="btn btn-success">Register</button>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
     <div class="row">
-        <div class="col-md-12 text-center">
-            <strong>The_ReFactory</strong> <br/> Migration Analytics - Simplified <br/> 2017
-        </div>
+      <div class="col-md-12 text-center">
+        <strong>The_ReFactory</strong> <br/> Migration Analytics - Simplified <br/> 2017
+      </div>
     </div>
-</div>
+  </div>
 
-<!-- Vendor scripts -->
-<script src="../stylesheets/vendor/jquery/dist/jquery.min.js"></script>
-<script src="../stylesheets/vendor/jquery-ui/jquery-ui.min.js"></script>
-<script src="../stylesheets/vendor/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="../stylesheets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../stylesheets/vendor/metisMenu/dist/metisMenu.min.js"></script>
-<script src="../stylesheets/vendor/iCheck/icheck.min.js"></script>
-<script src="../stylesheets/vendor/sparkline/index.js"></script>
+  <!-- Vendor scripts -->
+  <script src="../stylesheets/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="../stylesheets/vendor/jquery-ui/jquery-ui.min.js"></script>
+  <script src="../stylesheets/vendor/slimScroll/jquery.slimscroll.min.js"></script>
+  <script src="../stylesheets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../stylesheets/vendor/metisMenu/dist/metisMenu.min.js"></script>
+  <script src="../stylesheets/vendor/iCheck/icheck.min.js"></script>
+  <script src="../stylesheets/vendor/sparkline/index.js"></script>
 
-<!-- App scripts -->
-<script src="../javascripts/homer.js"></script>
+  <!-- App scripts -->
+  <script src="../javascripts/homer.js"></script>
 
 </body>
+
 </html>
