--- a/views/auth/select.ejs
+++ b/views/auth/select.ejs
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="text-center m-b-md">
-          <h3>Client or User?</h3>
+          <h3>Welcome to The_Refactory</h3>
         </div>
         <div class="hpanel">
           <div class="panel-body">
@@ -60,7 +60,7 @@
                                 <input type="password" title="Please enter your password" required value="" name="password" id="password" class="form-control">
                             </div> -->
               <div class="profile-picture">
-                <img src="../images/tacogif.gif" height="170" width="170" class="img-circle m-b" alt="logo">
+                <img src="../images/favicon.ico" height="170" width="170" class="img-circle m-b" alt="logo">
               </div>
               <!-- <div class="checkbox">
                                 <input type="checkbox" class="i-checks" checked>
