--- a/views/client/partials/footer.ejs
+++ b/views/client/partials/footer.ejs
@@ -37,8 +37,8 @@
           swal("Bye Champ", "See you soon!", "success");
           setTimeout(
             function() {
-              // window.location.href = "http://therefactory.herokuapp.com/auth/logout"
-              window.location.href = "http://localhost:3000/auth/logout"
+              window.location.href = "http://therefactory.herokuapp.com/auth/logout"
+              //window.location.href = "http://localhost:3000/auth/logout"
             }, 1000);
         } else {
           swal({
