localhost logout working

--- a/views/projects/partials/footer.ejs
+++ b/views/projects/partials/footer.ejs
@@ -38,8 +38,8 @@
           swal("Bye Champ", "See you soon!", "success");
           setTimeout(
             function() {
-              window.location.href = "http://therefactory.herokuapp.com/auth/logout"
-              //window.location.href = "http://localhost:3000/auth/logout"
+              //window.location.href = "http://therefactory.herokuapp.com/auth/logout"
+              window.location.href = "http://localhost:3000/auth/logout"
             }, 1000);
         } else {
           swal({
