removed animate-panel

--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -20,6 +20,11 @@
 <script src="../../javascripts/charts.js"></script>
 
 <script>
+  $(window).load(function() {
+    $("body").removeClass("preload");
+  });
+
+
   $('.logout').click(function() {
     swal({
         title: "Logging you off",
@@ -37,8 +42,8 @@
           swal("Bye Champ", "See you soon!", "success");
           setTimeout(
             function() {
-              //window.location.href = "http://therefactory.herokuapp.com/auth/logout"
-              window.location.href = "http://localhost:3000/auth/logout"
+              window.location.href = "http://therefactory.herokuapp.com/auth/logout"
+              //window.location.href = "http://localhost:3000/auth/logout"
             }, 1000);
         } else {
           swal({
