--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -12,12 +12,11 @@
   <link rel="shortcut icon" type="image/ico" href="../images/favicon.ico" />
 
   <!-- Vendor styles -->
-  <link rel="stylesheet" href="../../stylesheets/vendor/fontawesome/css/font-awesome.css" />
-  <link rel="stylesheet" href="../../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
-  <link rel="stylesheet" href="../../stylesheets/vendor/animate.css/animate.css" />
-  <link rel="stylesheet" href="../../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="../../../stylesheets/vendor/animate.css/animate.css" />
+  <link rel="stylesheet" href="../../../stylesheets/vendor/fontawesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="../../../stylesheets/vendor/metisMenu/dist/metisMenu.css" />
+  <link rel="stylesheet" href="../../../stylesheets/vendor/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="../../stylesheets/vendor/sweetalert/lib/sweet-alert.css" />
-  <link rel="stylesheet" href="../../stylesheets/vendor/toastr/build/toastr.min.css" />
 
   <!-- App styles -->
   <link rel="stylesheet" href="../../stylesheets/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
@@ -29,6 +28,13 @@
 <body class="fixed-navbar sidebar-scroll">
 
   <style>
+    .preload {
+      -webkit-transition: none !important;
+      -moz-transition: none !important;
+      -ms-transition: none !important;
+      -o-transition: none !important;
+    }
+
     .skin-option {
       position: fixed;
       text-align: center;
