--- a/views/clients/home.ejs
+++ b/views/clients/home.ejs
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div class="content animate-panel">
+      <div class="content ">
         <div class="row">
           <% clients.forEach(function (client) { %>
             <div class="projects">
