--- a/views/projects/home.ejs
+++ b/views/projects/home.ejs
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div class="content animate-panel">
+      <div class="content ">
         <div class="row">
           <% projects.forEach(function (project) { %>
             <div class="projects">
