--- a/views/admin/single.ejs
+++ b/views/admin/single.ejs
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div class="content animate-panel">
+      <div class="content">
 
         <div class="row">
           <div class="col-lg-4">
