--- a/views/auth/client_login.ejs
+++ b/views/auth/client_login.ejs
@@ -42,7 +42,7 @@
     <a href="/auth/select" class="btn btn-primary">Back</a>
   </div>
 
-  <div class="login-container animate-panel">
+  <div class="login-container ">
     <div class="row">
       <div class="col-md-12">
         <div class="text-center m-b-md">
