--- a/views/client/home.ejs
+++ b/views/client/home.ejs
@@ -17,7 +17,7 @@
             </p>
           </div>
         </div>
-        <div class="content animate-panel">
+        <div class="content ">
           <div class="row">
             <div class="col-lg-12">
               <div class="hpanel">
