--- a/views/client/project.ejs
+++ b/views/client/project.ejs
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <div class="content animate-panel">
+      <div class="content ">
 
         <div class="row">
 
