--- a/views/clients/edit.ejs
+++ b/views/clients/edit.ejs
@@ -3,7 +3,7 @@
   <div class="back-link">
     <a href="/clients/<%=client.id%>" class="btn btn-primary">Back</a>
   </div>
-  <div class="register-container animate-panel">
+  <div class="register-container ">
     <div class="row">
       <div class="col-md-12">
         <div class="text-center m-b-md">
