--- a/views/projects/single.ejs
+++ b/views/projects/single.ejs
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div class="content animate-panel">
+      <div class="content ">
 
         <div class="row">
 
