--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -3,7 +3,7 @@
   <div class="back-link">
     <a href="/admin/user/<%=user.id%>" class="btn btn-primary">Back</a>
   </div>
-  <div class="register-containerl">
+  <div class="register-container">
     <div class="row">
       <div class="col-md-12">
         <div class="text-center m-b-md">
