--- a/views/admin/forms/header.ejs
+++ b/views/admin/forms/header.ejs
@@ -10,7 +10,8 @@
   <!-- Page title -->
   <title>The ReFactory</title>
 
-  <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
+  <link rel="shortcut icon" type="image/ico" href="../images/favicon.ico" />
+
 
   <!-- Vendor styles -->
   <link rel="stylesheet" href="../../../stylesheets/vendor/fontawesome/css/font-awesome.css" />
