--- a/views/admin/nav/main.ejs
+++ b/views/admin/nav/main.ejs
@@ -166,6 +166,9 @@
         <a href="/admin"> <span class="nav-label">Admin</span> </a>
       </li>
       <li>
+        <a href="/search"> <span class="nav-label">Search</span> </a>
+      </li>
+      <li>
         <a href="/users/<%=admin.id%>"> <span class="nav-label">Dashboard</span> </a>
       </li>
       <li>
@@ -174,6 +177,7 @@
       <li>
         <a href="/clients"> <span class="nav-label">Clients</span> </a>
       </li>
+
     </ul>
   </div>
 </aside>
