--- a/views/projects/nav/main.ejs
+++ b/views/projects/nav/main.ejs
@@ -166,6 +166,9 @@
         <li>
           <a href="/admin%>"> <span class="nav-label">Admin</span> </a>
         </li>
+        <li>
+          <a href="/search%>"> <span class="nav-label">Search</span> </a>
+        </li>
         <%}%>
           <li>
             <a href="/users/<%=user.id%>"> <span class="nav-label">Dashboard</span> </a>
