animate is back in town

--- a/views/admin/single.ejs
+++ b/views/admin/single.ejs
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div class="content">
+      <div class="content animate-panel">
 
         <div class="row">
           <div class="col-lg-4">
@@ -411,7 +411,11 @@
 
       </div>
 
-
+      <footer class="footer">
+        <span class="pull-right">
+            The_ReFactory
+        </span> Company @2017
+      </footer>
     </div>
 
     <% include partials/footer %>
