--- a/views/clients/home.ejs
+++ b/views/clients/home.ejs
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div class="content ">
+      <div class="content animate-panel">
         <div class="row">
           <% clients.forEach(function (client) { %>
             <div class="projects">
@@ -64,5 +64,11 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <span class="pull-right">
+          The_ReFactory
+      </span> Company @2017
+    </footer>
 
     <% include partials/footer %>
