--- a/views/projects/home.ejs
+++ b/views/projects/home.ejs
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div class="content ">
+      <div class="content animate-panel">
         <div class="row">
           <% projects.forEach(function (project) { %>
             <div class="projects">
@@ -86,5 +86,11 @@
             </div>
         </div>
       </div>
+
     </div>
+    <footer class="footer">
+      <span class="pull-right">
+          The_ReFactory
+      </span> Company @2017
+    </footer>
     <% include partials/footer %>
