--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -3,7 +3,7 @@
   <div class="back-link">
     <a href="/projects" class="btn btn-primary">Back</a>
   </div>
-  <div class="register-container ">
+  <div class="register-container animate-panel">
     <div class="row">
       <div class="col-md-12">
         <div class="text-center m-b-md">
