--- a/views/search/home.ejs
+++ b/views/search/home.ejs
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <div class="content">
+      <div class="content animate-panel">
 
         <div class="row">
           <div class="col-md-3">
@@ -271,11 +271,10 @@
 
       </div>
 
-      <!-- Footer-->
       <footer class="footer">
         <span class="pull-right">
-              Example text
-          </span> Company 2015-2020
+            The_ReFactory
+        </span> Company @2017
       </footer>
 
     </div>
