--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -18,12 +18,12 @@
               </ol>
             </div>
             <h2 class="font-light m-b-xs">
-                Admin Panel
+                Admin
             </h2>
           </div>
         </div>
       </div>
-      <div class="content">
+      <div class="content animate-panel">
         <div class="row">
           <div class="col-lg-12">
             <div class="hpanel">
@@ -213,5 +213,10 @@
         </div>
 
       </div>
+      <footer class="footer">
+        <span class="pull-right">
+            The_ReFactory
+        </span> Company @2017
+      </footer>
     </div>
     <% include partials/footer %>
