--- a/views/client/home.ejs
+++ b/views/client/home.ejs
@@ -5,7 +5,7 @@
     <!-- Main Wrapper -->
     <div id="wrapper">
 
-      <div class="content">
+      <div class="content animate-panel">
         <div class="row">
           <div class="col-lg-12 text-center welcome-message">
             <h2>
