--- a/views/client/project.ejs
+++ b/views/client/project.ejs
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <div class="content ">
+      <div class="content animate-panel">
 
         <div class="row">
 
@@ -367,6 +367,11 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <span class="pull-right">
+            The_ReFactory
+        </span> Company @2017
+      </footer>
     </div>
 
     <% include partials/footer %>
