--- a/views/client/single.ejs
+++ b/views/client/single.ejs
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div class="content ">
+      <div class="content animate-panel">
 
         <div class="row">
           <div class="col-lg-4">
@@ -409,7 +409,11 @@
 
       </div>
 
-
+      <footer class="footer">
+        <span class="pull-right">
+            The_ReFactory
+        </span> Company @2017
+      </footer>
     </div>
 
     <% include partials/footer %>
