--- a/views/clients/single.ejs
+++ b/views/clients/single.ejs
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <div class="content ">
+      <div class="content animate-panel">
 
         <div class="row">
           <div class="col-lg-4">
@@ -410,7 +410,11 @@
 
       </div>
 
-
+      <footer class="footer">
+        <span class="pull-right">
+            The_ReFactory
+        </span> Company @2017
+      </footer>
     </div>
 
     <% include partials/footer %>
