--- a/views/projects/single.ejs
+++ b/views/projects/single.ejs
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div class="content ">
+      <div class="content animate-panel">
 
         <div class="row">
 
@@ -373,6 +373,11 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <span class="pull-right">
+            The_ReFactory
+        </span> Company @2017
+      </footer>
     </div>
 
     <% include partials/footer %>
