--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -9,7 +9,7 @@
             <p>Where data and analytics drive results for your migrations.</p>
           </div>
         </div>
-        <div class="content ">
+        <div class="content animate-panel">
           <div class="row">
             <div class="col-lg-12">
               <div class="hpanel">
