--- a/views/projects/home.ejs
+++ b/views/projects/home.ejs
@@ -31,7 +31,7 @@
               <div class="col-lg-6">
                 <div class="hpanel hgreen">
                   <div class="panel-body">
-                    <span class="label label-success pull-right"><%=project.status%></span>
+                    <span class="label label-<%=project.status%> pull-right"> <%=project.status%></span>
                     <div class="row">
                       <div class="col-sm-8">
                         <h4><a href="/projects/<%=project.id%>"> <%=project.name%></a></h4>
